[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.10.11"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
thiserror = "1.0.30"
arrayref = "0.3.6"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "1.10.11"
solana-sdk = "1.10.11"
solana-validator = "1.10.11"
solana-logger = "1.10.11"

[lib]
crate-type = ["cdylib", "lib"]
